--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "your-name-here/Stock",
+    "name": "felipepanegalli/plugin_estoque_cakephp3",
     "description": "Stock plugin for CakePHP",
     "type": "cakephp-plugin",
     "license": "MIT",
